# sensei

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  bitbucket-pipelines.yml  generate  vcpkg.json
common/: CMakeLists.txt  sensei_serial_protocol.h
doc/: DATA_PROTOCOL_SENSUS.xlsx
include/: public_header.h  version.h.in
linux/: CMakeLists.txt  README.md  generate
linux/include/: version.h.in
linux/rpi_gpio/: CMakeLists.txt
linux/rpi_gpio/include/rpi_shiftreg_gpio/: rpi_shiftreg_gpio.h
linux/rpi_gpio/src/: rpi_shiftreg_gpio.cpp  shiftreg_driver_conf.h
linux/rpi_gpio/test/: elk_pi_hw_test.h
linux/shiftregister_gpio/: CMakeLists.txt
linux/shiftregister_gpio/include/shiftreg_gpio/: shiftreg_gpio.h
linux/shiftregister_gpio/src/: shiftreg_gpio.cpp
linux/shiftregister_gpio/test/: elk_pi_hw_test.cpp
linux/src/: event_handler.cpp  event_handler.h  locked_queue.h  logging.cpp  logging.h  main.cpp  synchronized_queue.h  utils.h
linux/src/config_backend/: base_configuration.h  json_configuration.cpp  json_configuration.h
linux/src/hardware_backend/: base_hw_backend.h  gpio_hw_socket.cpp  gpio_hw_socket.h
linux/src/hardware_frontend/: base_hw_frontend.h  gpio_command_creator.cpp  gpio_command_creator.h  hw_frontend.cpp  hw_frontend.h  message_tracker.cpp  message_tracker.h  raspa_frontend.cpp  raspa_frontend.h  serial_command_creator.cpp  serial_command_creator.h  serial_frontend.cpp  serial_frontend.h  serial_frontend_internal.h  xmos_command_creator.cpp  xmos_command_creator.h
linux/src/mapping/: mapping_processor.cpp  mapping_processor.h  sensor_mappers.cpp  sensor_mappers.h
linux/src/message/: base_command.h  base_error.h  base_message.h  base_value.h  command.h  command_defs.h  message_factory.h  value.h  value_defs.h
linux/src/output_backend/: osc_backend.cpp  osc_backend.h  output_backend.h  output_backend.h.h  std_stream_backend.cpp  std_stream_backend.h
linux/src/serial_frontend/: message_tracker.cpp  message_tracker.h  serial_command_creator.cpp  serial_command_creator.h  serial_frontend.cpp  serial_frontend.h  serial_frontend_internal.h  serial_frontend_internal_definitions.h
linux/src/user_frontend/: osc_user_frontend.cpp  osc_user_frontend.h  user_frontend.cpp  user_frontend.h
linux/test/: CMakeLists.txt
linux/test/tools/osc_tools/: osc_led_flash.py  osc_led_loopback.py
linux/test/tools/oscsend/: CMakeLists.txt  osc_send_test.cpp
linux/test/tools/serial_example/: CMakeLists.txt  Serial.h
linux/test/tools/serial_example_cond_var/: CMakeLists.txt  Serial.h  serial_example_cond_val.cpp  test_serial.py
linux/test/tools/socket_example/: CMakeLists.txt  raspa_mockup.cpp
linux/test/unittests/: locked_queue_test.cpp  message_test.cpp  serial_frontend_test.cpp  synchronized_queue_test.cpp  test_utils.h
linux/test/unittests/configuration/: json_configuration_test.cpp  test_configuration.json
linux/test/unittests/hw_frontend/: gpio_command_creator_test.cpp
linux/test/unittests/mapping/: mapping_processor_test.cpp  output_backend_mockup.h  sensor_mappers_test.cpp
linux/test/unittests/message/: message_test.cpp
linux/test/unittests/output_backend/: osc_backend_test.cpp
linux/test/unittests/serial_frontend/: message_tracker_test.cpp  serial_command_creator_test.cpp  serial_fronted_internal_test.cpp  serial_frontend_test.cpp  xmos_command_creator_test.cpp
linux/test/unittests/user_frontend/: osc_user_frontend_test.cpp
linux/test_tools/oscsend/: CMakeLists.txt  README
linux/test_tools/serial_example/: CMakeLists.txt  README  Serial.cpp  Serial.h  serial_example.cpp  test_serial.py  types.h
linux/test_tools/serial_example_cond_var/: CMakeLists.txt  README  Serial.cpp
misc/: send_dumped_data.py  teensy_example.py  teensy_log_parser.py
misc/example configurations/: imu_config_example.json  xmos_test.json
misc/example_configs/: README.md  encoder_and_led_ring.json  led_button_pot.json
misc/logs/: log_data_20160412.txt
misc/osc_examples/: osc_enc_and_ring_loopback.py  osc_led_and_button_loopback.py
misc/sensei/: __init__.py  sensei_packet.py  sensei_protocol_defs.py  serial_frontend.py
shiftregister_gpio/: CMakeLists.txt
shiftregister_gpio/src/: shiftreg_driver_conf.h  shiftreg_gpio.cpp
src/: event_handler.cpp  event_handler.h  handler_interface.h  handlers.h  locked_queue.h  logging.cpp  logging.h  main.cpp  synchronized_queue.h  utils.h
src/config_backend/: base_configuration.h  json_configuration.cpp  json_configuration.h  sensei_config_schema.json
src/hardware_backend/: base_hw_backend.h  gpio_hw_socket.h  (+1 more)
teensy/: AnalogInput.cpp  AnalogInput.h  Butterworth.cpp  Butterworth.h  DigitalInput.cpp  DigitalInput.h  DigitalOutput.cpp  DigitalOutput.h  Filter.cpp  Filter.h  ManageDataPacket.cpp  ManageDataPacket.h  ManageIMU.cpp  ManageIMU.h  ManageIO.cpp  ManageIO.h  PIN.cpp  PIN.h  arm_functions.h  common.h  sensei_serial_protocol.h  taskCOM.cpp  taskCOM.h  taskLED.cpp  taskLED.h  taskRT.cpp  taskRT.h
test/: CMakeLists.txt
test/gtest_1_7_0/src/: gtest-death-test.cc
test/tools/osc_tools/: osc_led_loopback.py
test/tools/raspa_mock/: .gitignore  README.md  disable_bypass_mute.py  generate_bindings.sh  main.py  raspa_mock.py  requirements.txt  sensei_config.json
test/tools/serial_example/: CMakeLists.txt  Serial.cpp  serial_example.cpp  test_serial.py
test/tools/serial_example_cond_var/: CMakeLists.txt
test/tools/socket_example/: CMakeLists.txt  options.h  raspa_mockup.cpp
test/unittests/: locked_queue_test.cpp  sample_test.cpp  synchronized_queue_test.cpp  test_utils.h
test/unittests/configuration/: json_configuration_test.cpp  test_configuration.json
test/unittests/hw_frontend/: gpio_command_creator_test.cpp  message_tracker_test.cpp
test/unittests/mapping/: mapping_processor_test.cpp  output_backend_mockup.h  sensor_mappers_test.cpp
test/unittests/message/: message_test.cpp
test/unittests/output_backend/: grpc_backend_test.cpp  osc_backend_test.cpp
test/unittests/user_frontend/: grpc_user_frontend_test.cpp  osc_user_frontend_test.cpp
(+91 files in other folders)
